--- a/css/skeleton-dark.css
+++ b/css/skeleton-dark.css
@@ -77,7 +77,7 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 100%; }
 body {
-  background-color: #292929;
+  background-color: #181a1b;
   font-size: 18px;
   line-height: 24px;
   font-weight: 400;
